[package]
name = "mydb"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
log = "0.4.27"
log4rs = {version = "1.3.0", features = [ "console_appender"]} 
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
